--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,11 +38,11 @@
           </a>
         </p>
         <p class="footer-location">
-          <a href="https://maps.google.com/?q=34+Gainsborough+Road,+London+N12+8AG" target="_blank" rel="noopener" style="color: inherit;">
+          <a href="https://maps.google.com/?q=N12+8AG,+London,+UK" target="_blank" rel="noopener" style="color: inherit;">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="16" height="16" style="vertical-align: middle; margin-right: 5px;">
               <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
             </svg>
-            34D Gainsborough Road, N12 8AG
+            N12 8AG
           </a>
         </p>
       </div>
