--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,9 @@
   <!-- Styles -->
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
   
-  <!-- Favicon placeholder -->
-  <link rel="icon" type="image/png" href="{{ '/assets/images/favicon.png' | relative_url }}">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="apple-touch-icon" href="/assets/images/logo.png">
 </head>
 <body class="{% if page.lang == 'he' %}rtl{% else %}ltr{% endif %}">
   
