Replace services page with individual service pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,11 +60,11 @@
         <ul>
           {% if page.lang == 'he' %}
           <li><a href="/he/about">אודות</a></li>
-          <li><a href="/he/services">שירותים</a></li>
+          <li><a href="/he/couples-therapy">טיפול זוגי</a></li>
           <li><a href="/he/contact">צור קשר</a></li>
           {% else %}
           <li><a href="/en/about">About</a></li>
-          <li><a href="/en/services">Services</a></li>
+          <li><a href="/en/couples-therapy">Couples Therapy</a></li>
           <li><a href="/en/contact">Contact</a></li>
           {% endif %}
         </ul>
