--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,14 +2,20 @@
   {% if page.lang == 'he' %}
   <li class="nav-item" role="none"><a href="/he/" role="menuitem" class="nav-link{% if page.url == '/he/' or page.url == '/he/index.html' %} is-active" aria-current="page{% endif %}">בית</a></li>
   <li class="nav-item" role="none"><a href="/he/about" role="menuitem" class="nav-link{% if page.url contains '/he/about' %} is-active" aria-current="page{% endif %}">אודות</a></li>
-  <li class="nav-item" role="none"><a href="/he/services" role="menuitem" class="nav-link{% if page.url contains '/he/services' %} is-active" aria-current="page{% endif %}">שירותים</a></li>
+  <li class="nav-item" role="none"><a href="/he/individual-therapy" role="menuitem" class="nav-link{% if page.url contains '/he/individual-therapy' %} is-active" aria-current="page{% endif %}">טיפול פרטני</a></li>
+  <li class="nav-item" role="none"><a href="/he/couples-therapy" role="menuitem" class="nav-link{% if page.url contains '/he/couples-therapy' %} is-active" aria-current="page{% endif %}">טיפול זוגי</a></li>
+  <li class="nav-item" role="none"><a href="/he/psychosexual-therapy" role="menuitem" class="nav-link{% if page.url contains '/he/psychosexual-therapy' %} is-active" aria-current="page{% endif %}">טיפול פסיכו-מיני</a></li>
+  <li class="nav-item" role="none"><a href="/he/emdr" role="menuitem" class="nav-link{% if page.url contains '/he/emdr' %} is-active" aria-current="page{% endif %}">EMDR</a></li>
   <li class="nav-item" role="none"><a href="/he/clinic" role="menuitem" class="nav-link{% if page.url contains '/he/clinic' %} is-active" aria-current="page{% endif %}">הקליניקה</a></li>
   <li class="nav-item" role="none"><a href="/he/articles" role="menuitem" class="nav-link{% if page.url contains '/he/articles' %} is-active" aria-current="page{% endif %}">מאמרים</a></li>
   <li class="nav-item" role="none"><a href="/he/contact" role="menuitem" class="nav-link{% if page.url contains '/he/contact' %} is-active" aria-current="page{% endif %}">צור קשר</a></li>
   {% else %}
   <li class="nav-item" role="none"><a href="/en/" role="menuitem" class="nav-link{% if page.url == '/en/' or page.url == '/en/index.html' %} is-active" aria-current="page{% endif %}">Home</a></li>
   <li class="nav-item" role="none"><a href="/en/about" role="menuitem" class="nav-link{% if page.url contains '/en/about' %} is-active" aria-current="page{% endif %}">About</a></li>
-  <li class="nav-item" role="none"><a href="/en/services" role="menuitem" class="nav-link{% if page.url contains '/en/services' %} is-active" aria-current="page{% endif %}">Services</a></li>
+  <li class="nav-item" role="none"><a href="/en/individual-therapy" role="menuitem" class="nav-link{% if page.url contains '/en/individual-therapy' %} is-active" aria-current="page{% endif %}">Individual Therapy</a></li>
+  <li class="nav-item" role="none"><a href="/en/couples-therapy" role="menuitem" class="nav-link{% if page.url contains '/en/couples-therapy' %} is-active" aria-current="page{% endif %}">Couples Therapy</a></li>
+  <li class="nav-item" role="none"><a href="/en/psychosexual-therapy" role="menuitem" class="nav-link{% if page.url contains '/en/psychosexual-therapy' %} is-active" aria-current="page{% endif %}">Psychosexual Therapy</a></li>
+  <li class="nav-item" role="none"><a href="/en/emdr" role="menuitem" class="nav-link{% if page.url contains '/en/emdr' %} is-active" aria-current="page{% endif %}">EMDR</a></li>
   <li class="nav-item" role="none"><a href="/en/clinic" role="menuitem" class="nav-link{% if page.url contains '/en/clinic' %} is-active" aria-current="page{% endif %}">Clinic</a></li>
   <li class="nav-item" role="none"><a href="/en/articles" role="menuitem" class="nav-link{% if page.url contains '/en/articles' %} is-active" aria-current="page{% endif %}">Articles</a></li>
   <li class="nav-item" role="none"><a href="/en/contact" role="menuitem" class="nav-link{% if page.url contains '/en/contact' %} is-active" aria-current="page{% endif %}">Contact</a></li>
