Rename Individual Therapy to Psychotherapy

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
   <li class="nav-item" role="none"><a href="/he/contact" role="menuitem" class="nav-link{% if page.url contains '/he/contact' %} is-active" aria-current="page{% endif %}">צור קשר</a></li>
   {% else %}
   <li class="nav-item" role="none"><a href="/en/about" role="menuitem" class="nav-link{% if page.url contains '/en/about' %} is-active" aria-current="page{% endif %}">About</a></li>
-  <li class="nav-item" role="none"><a href="/en/individual-therapy" role="menuitem" class="nav-link{% if page.url contains '/en/individual-therapy' %} is-active" aria-current="page{% endif %}">Individual Therapy</a></li>
+  <li class="nav-item" role="none"><a href="/en/individual-therapy" role="menuitem" class="nav-link{% if page.url contains '/en/individual-therapy' %} is-active" aria-current="page{% endif %}">Psychotherapy</a></li>
   <li class="nav-item" role="none"><a href="/en/couples-therapy" role="menuitem" class="nav-link{% if page.url contains '/en/couples-therapy' %} is-active" aria-current="page{% endif %}">Couples Therapy</a></li>
   <li class="nav-item" role="none"><a href="/en/psychosexual-therapy" role="menuitem" class="nav-link{% if page.url contains '/en/psychosexual-therapy' %} is-active" aria-current="page{% endif %}">Psychosexual Therapy</a></li>
   <li class="nav-item" role="none"><a href="/en/emdr" role="menuitem" class="nav-link{% if page.url contains '/en/emdr' %} is-active" aria-current="page{% endif %}">EMDR</a></li>
