--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,7 +110,7 @@
           "@type": "Offer",
           "itemOffered": {
             "@type": "Service",
-            "name": "Individual Therapy",
+            "name": "Psychotherapy",
             "description": "One-to-one therapeutic support"
           }
         },
