Update all Hebrew pages to match English versions

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   {% if page.lang == 'he' %}
   <li class="nav-item" role="none"><a href="/he/" role="menuitem" class="nav-link{% if page.url == '/he/' or page.url == '/he/index.html' %} is-active" aria-current="page{% endif %}">בית</a></li>
   <li class="nav-item" role="none"><a href="/he/about" role="menuitem" class="nav-link{% if page.url contains '/he/about' %} is-active" aria-current="page{% endif %}">אודות</a></li>
-  <li class="nav-item" role="none"><a href="/he/individual-therapy" role="menuitem" class="nav-link{% if page.url contains '/he/individual-therapy' %} is-active" aria-current="page{% endif %}">טיפול פרטני</a></li>
+  <li class="nav-item" role="none"><a href="/he/individual-therapy" role="menuitem" class="nav-link{% if page.url contains '/he/individual-therapy' %} is-active" aria-current="page{% endif %}">פסיכותרפיה</a></li>
   <li class="nav-item" role="none"><a href="/he/couples-therapy" role="menuitem" class="nav-link{% if page.url contains '/he/couples-therapy' %} is-active" aria-current="page{% endif %}">טיפול זוגי</a></li>
   <li class="nav-item" role="none"><a href="/he/psychosexual-therapy" role="menuitem" class="nav-link{% if page.url contains '/he/psychosexual-therapy' %} is-active" aria-current="page{% endif %}">טיפול פסיכו-מיני</a></li>
   <li class="nav-item" role="none"><a href="/he/emdr" role="menuitem" class="nav-link{% if page.url contains '/he/emdr' %} is-active" aria-current="page{% endif %}">EMDR</a></li>
